--- a/actsys-api/src/main/resources/application-dev.yml
+++ b/actsys-api/src/main/resources/application-dev.yml
@@ -15,39 +15,14 @@ endpoints:
     enabled: false
 
 
-##数据源
-datasource:
-  master:
-    url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
-    driverClassName: com.mysql.jdbc.Driver
-    username: root
-    password: mamahao
-  slave:
-      url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
-      driverClassName: com.mysql.jdbc.Driver
-      username: root
-      password: mamahao
 
-
-##mybatis配置
-mybatis:
-  master:
-    shardId: 0
-    shardType: SHARD_TYPE_MAIN
-    master: true
-    configLocation: classpath:/mybatis/mybatisCfg.xml
-  slave:
-    shardId: 1
-    shardType: SHARD_TYPE_MAIN
-    master: false
-    configLocation: classpath:/mybatis/mybatisCfg.xml
 
 ##注册中心配置
 eureka:
   client:
     service-url:
 #      defaultZone: http://192.168.10.201:8080/eureka/v2/
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:32772/eureka/
   instance:
     preferIpAddress: true
     metadata-map:
@@ -58,3 +33,30 @@ my:
   profile:
     env:
       name: dev-env
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+    username: root
+    password: mamahao
+
+custom:
+  datasource:
+    names: ds1,ds2
+    ds1:
+      type: com.alibaba.druid.pool.DruidDataSource
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+      username: root
+      password: mamahao
+    ds2:
+      type: com.alibaba.druid.pool.DruidDataSource
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+      username: root
+      password: mamahao
+
+mybatis:
+    mapper-locations: classpath*:mapper/*Mapper.xml
+    type-aliases-package: com.mamahao.actsys.api.po
