--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <alibaba.druid.version>1.0.20</alibaba.druid.version>
         <c3p0.version>0.9.1.2</c3p0.version>
         <commons.lang.version>3.4</commons.lang.version>
+        <commons.bean.version>1.9.2</commons.bean.version>
         <docker.plugin.version>0.3.258</docker.plugin.version>
         <google.guava.version>19.0</google.guava.version>
         <project.build.encoding>UTF-8</project.build.encoding>
@@ -36,6 +37,7 @@
         <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
         <spring.version>4.2.6.RELEASE</spring.version>
         <slf4j.version>1.7.21</slf4j.version>
+        <tk.mybatis.version>3.3.6</tk.mybatis.version>
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -91,6 +93,17 @@
                 <artifactId>mybatis-spring</artifactId>
                 <version>${mybatis.spring.version}</version>
             </dependency>
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper</artifactId>
+                <version>${tk.mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons.bean.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <dependencies>
