--- a/actsys-api-02/src/main/resources/application-dev.yml
+++ b/actsys-api-02/src/main/resources/application-dev.yml
@@ -28,27 +28,88 @@ eureka:
     metadata-map:
       instanceId: ${spring.application.name}:${random.value}
 
-#数据源配置
-datasource:
-  master:
+
+spring:
+  datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
     username: root
     password: mamahao
-  slaves:
-    - s0:
+
+custom:
+  datasource:
+    names: ds1,ds2
+    ds1:
+      type: com.alibaba.druid.pool.DruidDataSource
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+      username: root
+      password: mamahao
+    ds2:
+      type: com.alibaba.druid.pool.DruidDataSource
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+      username: root
+      password: mamahao
+
+#数据源配置
+datasources:
+  - #!com.mamahao.actsys.api.configuration.datasource.DataSourceConfigGroup
+    group-name: ms0
+    items:
+      - #!com.mamahao.actsys.api.configuration.datasource.DataSourceConfig
+        name: ms0_ds0
+        master: true
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
         url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
         username: root
         password: mamahao
-    - s1:
+      - #!com.mamahao.actsys.api.configuration.datasource.DataSourceConfig
+        name: ms0_ds1
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
         url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
         username: root
         password: mamahao
+      - #!com.mamahao.actsys.api.configuration.datasource.DataSourceConfig
+        name: ms0_ds1
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+        username: root
+        password: mamahao
+  - #!com.mamahao.actsys.api.configuration.datasource.DataSourceConfigGroup
+    group-name: ms1
+    items:
+      - #!com.mamahao.actsys.api.configuration.datasource.DataSourceConfig
+        name: ms1_ds0
+        master: true
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+        username: root
+        password: mamahao
+      - #!com.mamahao.actsys.api.configuration.datasource.DataSourceConfig
+        name: ms0_ds1
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+        username: root
+        password: mamahao
+  - #!com.mamahao.actsys.api.configuration.datasource.DataSourceConfigGroup
+    group-name: ms2
+    items:
+      - #!com.mamahao.actsys.api.configuration.datasource.DataSourceConfig
+        name: ms2_ds1
+        master: true
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://172.28.1.6:3306/db_gd_dev?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+        username: root
+        password: mamahao
+
 mybatis:
   config:
     mapper-locations: classpath*:mapper/*Mapper.xml
