--- a/actsys-api/pom.xml
+++ b/actsys-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>actsys-api-02</artifactId>
+    <artifactId>actsys-api</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
