--- a/actsys-api/src/main/resources/application-dev.yml
+++ b/actsys-api/src/main/resources/application-dev.yml
@@ -101,16 +101,16 @@ ssm:
   cache:
     disable: true
 
-#redis配置
+#缓存配置
 cache:
-  redis: #缓存专用
+  redis:
     enabled: false
     database: 0
     password:
     host: 172.28.1.14
     port: 6379
     timeout: 100
-    expire: 1800
+    expire-seconds: 1800
     pool:
       max-idle: 8
       max-total: 20
@@ -129,17 +129,17 @@ cache:
     enabled: true
     session-idle-timeout: 10000
     default-cache-name: default_cache
-    default-expire: 1800
+    default-expire-seconds: 1800
     caches:
       -
         name: default_cache
-        expire: 1800
+        expire-seconds: 1800
       -
         name: test_cache
-        expire: 1800
+        expire-seconds: 1800
       -
         name: demo_cache
-        expire: 1800
+        expire-seconds: 1800
     addrs:
       -
         host: 172.28.1.129
@@ -168,4 +168,20 @@ redis:
           host: 172.28.1.16
           port: 6379
 
+mongo:
+  config:
+    enable: true
+    username: test
+    password: test123
+    connection-per-host: 100
+    connection-timeout: 30000
+    max-wait-time: 30000
+    addrs:
+      -
+        host: 172.28.1.3
+        port: 27017
+      -
+        host: 172.28.1.28
+        port: 27017
 
+mongo
